operation for update delete was created

--- a/src/app/shared/list-flights/list-flights.component.html
+++ b/src/app/shared/list-flights/list-flights.component.html
@@ -17,4 +17,6 @@
             <li>{{ticket.flightId}}</li>     
         </ul>        
     </li>
+    <li><button routerLink="/flights/{{flight.id}}">Update</button></li>
+    <li><button (click)="deleteFlight(flight.id)">Delete</button></li>
 </ul>
