Added deteils for all entities

--- a/src/app/detail-aircraft/detail-aircraft.component.html
+++ b/src/app/detail-aircraft/detail-aircraft.component.html
@@ -1,3 +1,25 @@
-<p>
-  detail-aircraft works!
-</p>
+
+<form [formGroup]="AircraftForm" (submit)="applyChanges(AircraftForm.value)" >
+  <div class="form-group">
+
+ 
+      <input [hidden] = "true" placeholder="Enter your First Name" formControlName="id">
+  
+      <input  placeholder="Enter type aircraft id " formControlName="typeAircraftId">
+
+      <input type="date" placeholder="yyyy-MM-dd" min="0000-00-00"
+       max="2019-01-01" required  
+       formControlName="dateRelease"
+       />
+
+      <input  placeholder="Enter aircraft name" formControlName="aircraftName">
+
+
+      <input type="time" placeholder="hh:mm" min="00-00" max="23-59"
+       required  formControlName="lifetime"/>
+
+       <input  placeholder="Enter crewId" formControlName="crewId">
+
+    <input type="submit" class="button expanded" value="Save changes" [disabled]="AircraftForm.invalid">
+  </div>
+</form>
