--- a/src/app/detail-flight/detail-flight.component.html
+++ b/src/app/detail-flight/detail-flight.component.html
@@ -1,15 +1,19 @@
-<form [formGroup]="flightForm" (submit)="applyChanges(flightForm.value)" >
 
-        <input placeholder="Enter arrivalPoint " formControlName="arrivalPoint">
+<form [formGroup]="FlightForm" (submit)="applyChanges(FlightForm.value)" >
+    <div class="form-group">
   
-        <input placeholder="Enter departurePoint" formControlName="departurePoint">
+   
+        <input [hidden] = "true" placeholder="-" formControlName="id">
 
-        <input placeholder="Enter departureTime" formControlName="departureTime" >
-        <!-- <mat-error *ngIf="errorMessages.email">{{errorMessages.email}}</mat-error>required -->
-  
-        <input placeholder="Enter your arrivalTime" formControlName="arrivalTime">
-        <!-- <mat-error *ngIf="errorMessages.password">{{errorMessages.password}}</mat-error> -->
-  
-      <input type="submit" value="Save changes" [disabled]="flightForm.invalid">
+        <input  placeholder="Enter departurePoint" formControlName="departurePoint">
 
+        <input  placeholder="Enter arrivalPoint" formControlName="arrivalPoint">
+  
+        <input type="time" placeholder="Enter departureTime" formControlName="departureTime">
+
+         <input type="time"  placeholder="Enter arrivalTime" formControlName="arrivalTime">
+  
+  
+      <input type="submit" class="button expanded" value="Save changes" [disabled]="FlightForm.invalid">
+    </div>
   </form>
