--- a/src/app/detail-pilot/detail-pilot.component.html
+++ b/src/app/detail-pilot/detail-pilot.component.html
@@ -1,3 +1,24 @@
-<p>
-  detail-pilot works!
-</p>
+
+<form [formGroup]="PilotForm" (submit)="applyChanges(PilotForm.value)" >
+    <div class="form-group">
+  
+   
+        <input [hidden] = "true" placeholder="-" formControlName="id">
+    
+        <input  placeholder="Enter name" formControlName="name">
+  
+        <input  placeholder="Enter surname" formControlName="surname">
+
+        <input type="date" placeholder="yyyy-MM-dd" min="0000-00-00"
+         max="2019-01-01" required  
+         formControlName="dateBirth"
+         />
+  
+         <input  placeholder="Enter experience" formControlName="experience">
+
+         <input  placeholder="Enter crewId" formControlName="crewId" required>
+  
+  
+      <input type="submit" class="button expanded" value="Save changes" [disabled]="PilotForm.invalid">
+    </div>
+  </form>
