--- a/src/app/detail-typeaircraft/detail-typeaircraft.component.html
+++ b/src/app/detail-typeaircraft/detail-typeaircraft.component.html
@@ -1,3 +1,15 @@
-<p>
-  detail-typeaircraft works!
-</p>
+<form [formGroup]="TypeAircraftForm" (submit)="applyChanges(TypeAircraftForm.value)" >
+    <div class="form-group">
+  
+   
+        <input [hidden] = "true" placeholder="-" formControlName="id">
+    
+        <input  placeholder="Enter aircraftModel" formControlName="aircraftModel">
+  
+        <input  placeholder="Enter numberPlaces" formControlName="numberPlaces">
+  
+         <input  placeholder="Enter carryingCapacity" formControlName="carryingCapacity">
+  
+      <input type="submit" class="button expanded" value="Save changes" [disabled]="TypeAircraftForm.invalid">
+    </div>
+  </form>
