--- a/src/app/detail-aircraft/detail-aircraft.component.html
+++ b/src/app/detail-aircraft/detail-aircraft.component.html
@@ -22,4 +22,4 @@
 
     <input type="submit" class="button expanded" value="Save changes" [disabled]="AircraftForm.invalid">
   </div>
-</form>
+</form>z
