--- a/src/app/list-pilots/list-pilots.component.html
+++ b/src/app/list-pilots/list-pilots.component.html
@@ -1,11 +1,22 @@
 <div>
-    <button routerLink="./0">Create</button>
-    <ul  *ngFor="let Pilot of Pilots">
-        <li routerLink="./{{Pilot.id}}">{{Pilot.id}}</li>
-        <li>{{Pilot.name}}</li>
-        <li>{{Pilot.surname}}</li>
-        <li>{{Pilot.experience}}</li>
-        <li>{{Pilot.dateBirth | date: 'longDate'}}</li>
-        <li><button (click)="deletePilot(Pilot.id)">Delete</button></li>
-    </ul>
-</div>
+        <button mat-button class="createButton" routerLink="./0">Create new </button>
+
+        <table id="entities">
+                <tr>
+                  <th>name</th>
+                  <th>surname</th>
+                  <th>experience</th>
+                  <th>dateBirth</th>
+                  <th></th>
+                </tr>
+                
+                <tr *ngFor="let Pilot of Pilots" >
+                  <td  routerLink="./{{Pilot.id}}">{{Pilot.name}}</td>
+                  <td>{{Pilot.surname}}</td>
+                  <td>{{Pilot.experience}}</td>
+                  <td>{{Pilot.dateBirth | date: 'longDate'}}</td>
+                  <td><button mat-button (click)="deletePilot(Pilot.id)">Delete</button></td>
+                </tr>
+        </table>
+    </div>
+    
