--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+// @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
